logs/Slang/chapter-9/9.4.5--event_nonblocking_assignment_repeat_neg.sv.log
name: event_nonblocking_assignment_repeat_neg
description: event non blk assignment repeat
should_fail: 0
tags: 9.4.5
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.5--event_nonblocking_assignment_repeat_neg.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.5--event_nonblocking_assignment_repeat_neg.sv:13:7: error: language feature not yet supported
		a = repeat(-3) @(posedge clk) b;
		    ^~~~~~~~~~~~~~~~~~~~~~~~~~~
